<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<com.wanderwildwood.kotozute.common.widget.PagingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/sectionRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/archived"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/drawer_archived" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/scheduled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/drawer_scheduled" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/blocking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/drawer_blocking" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_notifications_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_category_general" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categorySending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_category_sending" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_category_storage" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categoryDesktopSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_category_desktop_sync" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/categorySignal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_category_signal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_text_size_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/unreadAtTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_unread_at_top_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/swipeActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:title="@string/settings_swipe_actions" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionSending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_signature_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/delayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_delayed_title"
                tools:summary="No delay" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_delivery_title"
                app:widget="@layout/settings_switch_widget" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/readReceipts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_read_receipts_summary"
                app:title="@string/settings_read_receipts_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/longAsMms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_long_as_mms_summary"
                app:title="@string/settings_long_as_mms_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/unicode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_unicode_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/mobileOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_mobile_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/mmsSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:title="@string/settings_mms_size_title"
                tools:summary="100KB" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/backup_title" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_sync_summary"
                app:title="@string/settings_sync_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/messageLinkHandling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:title="@string/settings_mms_weblink_title"
                tools:summary="100KB" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/disableScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_disable_screenshots_title"
                app:widget="@layout/settings_switch_widget" />
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/autoDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_auto_delete"
                tools:summary="Never" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionDesktop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_desktop_sync_summary_off"
                app:title="@string/settings_desktop_sync_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_desktop_sync_link_summary"
                app:title="@string/settings_desktop_sync_link_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncTailscaleOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_desktop_sync_tailscale_only_summary"
                app:title="@string/settings_desktop_sync_tailscale_only_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/desktopSyncReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_desktop_sync_reset_summary"
                app:title="@string/settings_desktop_sync_reset_title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionSignal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!--
              Above the bridge row on purpose. Linking directly is the route that needs no
              second computer, so it is the one to meet first; the bridge stays for anyone
              already using one.
            -->
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_signal_link_summary"
                app:title="@string/settings_signal_link_title" />

            <!-- The bridge is on its way out: it wants a computer that never sleeps, and the
                 phone no longer needs one. It stays because it is the way back if the direct
                 rail misbehaves, but it is not something to put in front of someone who has
                 just installed this. Hidden behind here unless one is already paired. -->
            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalAdvanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_signal_advanced_summary"
                app:title="@string/settings_signal_advanced_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalPair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_signal_pair_summary"
                app:title="@string/settings_signal_pair_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_enabled_summary"
                app:title="@string/settings_signal_enabled_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_open_summary"
                app:title="@string/settings_signal_open_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_history_summary"
                app:title="@string/settings_signal_history_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_account_summary"
                app:title="@string/settings_signal_account_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalKeepConnected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_keep_summary"
                app:title="@string/settings_signal_keep_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalWeave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_weave_summary"
                app:title="@string/settings_signal_weave_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalReceipts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_receipts_summary"
                app:title="@string/settings_signal_receipts_title"
                app:widget="@layout/settings_switch_widget" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:title="@string/settings_signal_status_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalStopBridge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_stop_bridge_summary"
                app:title="@string/settings_signal_stop_bridge_title" />

            <com.wanderwildwood.kotozute.common.widget.PreferenceView
                android:id="@+id/signalUnpair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_signal_unpair_summary"
                app:title="@string/settings_signal_unpair_title" />

        </LinearLayout>

    </LinearLayout>

</com.wanderwildwood.kotozute.common.widget.PagingScrollView>
